--- a/hw_9.ipynb
+++ b/hw_9.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOuF9VkA1dhIBG4ybAZyAtF",
+      "authorship_tag": "ABX9TyN0owfYcMrFabMUlFPZM5ax",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df[(df['population']<500) & (df['population']>0)]['median_house_value'].mean()"
+        "df[(df['population']<=500) & (df['population']>0)]['median_house_value'].mean()"
       ],
       "metadata": {
         "colab": {
